# pd_multithreading

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGES.txt  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.txt  requirements.txt  rtd_requirements.txt  setup.cfg  setup.py
docs/source/: changelog.rst  conf.py  index.rst  methods.rst
pd_multiprocessing/: map.py
pd_multiprocessing/test/: test_map_df_map.py
pd_multithreading/: map.py
pd_multithreading/test/: test_map_df_map.py
