[metadata]
name = pd_multiprocessing
version = 1.0.4-alpha1

description = pd_multiprocessing provides a simple, parallelized function to apply a user defined function rowwise on a Pandas Dataframe.
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/stavrakidis/pd_multiprocessing
project_urls =
    Source=https://github.com/stavrakidis/pd_multiprocessing
    Tracker=https://github.com/stavrakidis/pd_multiprocessing/issues
    Dokumentation=https://pd-multiprocessing.readthedocs.io/en/latest/

author = Kyriakos Stavrakidis

license = MIT license
license_file = LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
platforms = any


[options]
packages =
    pd_multiprocessing
    pd_multiprocessing.test
python_requires = >=3.4

